--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+<!--             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
 
                 <figure class="project-img">
@@ -670,7 +670,7 @@
                 <p class="project-category">Web development</p>
 
               </a>
-            </li>
+            </li> -->
 
            <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
@@ -708,7 +708,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+<!--             <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
 
                 <figure class="project-img">
@@ -742,7 +742,7 @@
                 <p class="project-category">Web design</p>
 
               </a>
-            </li>
+            </li> -->
 
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://mayank143-git.github.io/weather_app/">
@@ -762,7 +762,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+<!--             <li class="project-item  active" data-filter-item data-category="applications">
               <a href="#">
 
                 <figure class="project-img">
@@ -796,7 +796,7 @@
                 <p class="project-category">Web development</p>
 
               </a>
-            </li>
+            </li> -->
 
           </ul>
 
