--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
             </li> -->
 
            <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://mayank143-git.github.io/movies/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -698,10 +698,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/project-4.png" alt="poster" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">Poster design</h3>
 
                 <p class="project-category">Graphic design</p>
 
