--- a/index.html
+++ b/index.html
@@ -698,10 +698,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="poster" loading="lazy">
+                  <img src="./assets/images/project-14.png" alt="banner" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Poster design</h3>
+                <h3 class="project-title">Banner</h3>
 
                 <p class="project-category">Graphic design</p>
 
